--- a/dmu32/dmu32_AKARI-SEP/meta_main.yml
+++ b/dmu32/dmu32_AKARI-SEP/meta_main.yml
@@ -1,14 +1,14 @@
 field: AKARI-SEP
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/AKARI-SEP_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/AKARI-SEP_MOC.fits
 
 surveys: [ SIMES, VISTA-VHS, DES ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/master_catalogue_akari-sep_20180221.fits
+masterlist: dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/master_catalogue_akari-sep_20180221.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/depths_akari-sep_20180221.fits
+depths: dmu_products/dmu1/dmu1_ml_AKARI-SEP/data/depths_akari-sep_20180221.fits
 
-flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_AKARI-SEP/data/akari-sep_20180221_flags.fits
+flags: dmu_products/dmu6/dmu6_v_AKARI-SEP/data/akari-sep_20180221_flags.fits
 
 xid: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_AKARI-SEP/data/AKARI-SEP_20180221_cigale.fits
+final: dmu_products/dmu32/dmu32_AKARI-SEP/data/AKARI-SEP_20180221_cigale.fits
