--- a/dmu32/dmu32_HDF-N/meta_main.yml
+++ b/dmu32/dmu32_HDF-N/meta_main.yml
@@ -1,14 +1,14 @@
 field: HDF-N
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/HDF-N_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/HDF-N_MOC.fits
 
 surveys: [ CANDELS-3D-HST, GOODS-ACS, Hawaii-HDFN, Ultradeep-Ks-GOODS-N, PanSTARRS1-3SS, CANDELS-GOODS-N ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_20180427.fits
+masterlist: dmu_products/dmu1/dmu1_ml_HDF-N/data/master_catalogue_hdf-n_20180427.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_HDF-N/data/depths_hdf-n_20180427.fits
+depths: dmu_products/dmu1/dmu1_ml_HDF-N/data/depths_hdf-n_20180427.fits
 
-flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_HDF-N/data/hdf-n_20180427_flags.fits
+flags: dmu_products/dmu6/dmu6_v_HDF-N/data/hdf-n_20180427_flags.fits
 
 xid: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_HDF-N/data/HDF-N_20180427_cigale.fits
+final: dmu_products/dmu32/dmu32_HDF-N/data/HDF-N_20180427_cigale.fits
