--- a/dmu32/dmu32_SA13/meta_main.yml
+++ b/dmu32/dmu32_SA13/meta_main.yml
@@ -1,12 +1,12 @@
 field: SA13
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/SA13_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/SA13_MOC.fits
 
 surveys: [ LegacySurvey, UHS ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SA13/data/master_catalogue_sa13_20180501.fits
+masterlist: dmu_products/dmu1/dmu1_ml_SA13/data/master_catalogue_sa13_20180501.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SA13/data/depths_sa13_20180501.fits
+depths: dmu_products/dmu1/dmu1_ml_SA13/data/depths_sa13_20180501.fits
 
 flags: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_SA13/data/SA13_20180501_cigale.fits
+final: dmu_products/dmu32/dmu32_SA13/data/SA13_20180501_cigale.fits
