--- a/dmu32/dmu32_xFLS/meta_main.yml
+++ b/dmu32/dmu32_xFLS/meta_main.yml
@@ -1,14 +1,14 @@
 field: xFLS
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/xFLS_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/xFLS_MOC.fits
 
 surveys: [ DataFusion-Spitzer, INT-WFC, KPNO-FLS, PanSTARRS-3SS, LegacySurvey, UHS ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_xFLS/data/master_catalogue_xfls_20180501.fits
+masterlist: dmu_products/dmu1/dmu1_ml_xFLS/data/master_catalogue_xfls_20180501.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_xFLS/data/depths_xfls_20180501.fits
+depths: dmu_products/dmu1/dmu1_ml_xFLS/data/depths_xfls_20180501.fits
 
-flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_xFLS/data/xfls_20180501_flags.fits
+flags: dmu_products/dmu6/dmu6_v_xFLS/data/xfls_20180501_flags.fits
 
 xid: None
 
@@ -16,4 +16,4 @@ photoz: None
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_xFLS/data/xFLS_20180501_cigale.fits
+final: dmu_products/dmu32/dmu32_xFLS/data/xFLS_20180501_cigale.fits
