--- a/dmu1/dmu1_ml_Herschel-Stripe-82/meta_main.yml
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/meta_main.yml
@@ -1,6 +1,6 @@
 Acknowledgements: Shirley et al (in prep)
 Author: Raphael Shirley and Yannick Roehhly
-Field: AKARI-NEP
+Field: Herschel-Stripe-82
 Related products:
 - dmu0
 - dmu24
@@ -10,11 +10,11 @@ Selection filter: null
 Version: DR1
 description: The masterlist file built on a positional cross match of the input surveys.
 files:
-- file: dmu1/dmu1_ml_AKARI-NEP/master_catalogue_akari-nep_20180215.fits
+- file: dmu1/dmu1_ml_Herschel-Stripe-82/master_catalogue_herschel-stripe-82_20180307.fits
   name: masterlist
-- file: dmu1/dmu1_ml_AKARI-NEP/depths_akari-nep_20180215.fits
+- file: dmu1/dmu1_ml_Herschel-Stripe-82/depths_herschel-stripe-82_20180307.fits
   name: depths
-- file: dmu1/dmu1_ml_AKARI-NEP/master_catalogue_cross_id_akari-nep_20180215.fits
+- file: dmu1/dmu1_ml_Herschel-Stripe-82/master_catalogue_cross_id_herschel-stripe-82_20180307.fits
   name: cross ids
 product: Master catalogue (DMU1)
 servers:
@@ -23,6 +23,15 @@ servers:
   name: HeDaM
   url: hedam.lam.fr/HELP/data
 surveys:
-- AKARI-NEP-OptNIR
+- HSC-SSP
+- VISTA-VHS
+- VICS82
+- UKIDSS-LAS
 - PanSTARRS-3SS
-- NEP-Spitzer
+- SHELA
+- SpIES
+- DECaLS
+- DES
+- RCSLenS
+- SDSS-S82
+- SDSS-S81-IAC
