--- a/dmu32/dmu32_GAMA-09/meta_main.yml
+++ b/dmu32/dmu32_GAMA-09/meta_main.yml
@@ -1,19 +1,19 @@
 field: GAMA-09
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/GAMA-09_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/GAMA-09_MOC.fits
 
 surveys: [ CFHTLS, CFHTLenS, DECaLS, HSC-SSP, KIDS, PanSTARRS-3SS, UKIDSS-LAS, VISTA-VHS, VISTA-VIKING ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_GAMA-09/data/master_catalogue_gama-09_20180601.fits
+masterlist: dmu_products/dmu1/dmu1_ml_GAMA-09/data/master_catalogue_gama-09_20180601.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits
+depths: dmu_products/dmu1/dmu1_ml_GAMA-09/data/depths_gama-09_20180601.fits
 
-flags: http://hedam.lam.fr/HELP/data/dmu_products/dmu6/dmu6_v_GAMA-09/data/gama-09_20171206_flags.fits
+flags: dmu_products/dmu6/dmu6_v_GAMA-09/data/gama-09_20171206_flags.fits
 
-xid: http://hedam.lam.fr/HELP/data/dmu_producst/dmu26/dmu26_XID+SPIRE_GAMA-09/data/dmu26_XID+SPIRE_GAMA-09_20180508.fits
+xid: dmu_producst/dmu26/dmu26_XID+SPIRE_GAMA-09/data/dmu26_XID+SPIRE_GAMA-09_20180508.fits
 
-photoz: http://hedam.lam.fr/HELP/data/dmu_products/dmu24/dmu24_GAMA-09/data/master_catalogue_gama-09_20171206_photoz_20180213_r_optimised.fits
+photoz: dmu_products/dmu24/dmu24_GAMA-09/data/master_catalogue_gama-09_20171206_photoz_20180213_r_optimised.fits
 
-cigale: http://hedam.lam.fr/HELP/data/dmu_products/dmu28/dmu28_GAMA-09/data/zphot/HELP_final_results.fits
+cigale: dmu_products/dmu28/dmu28_GAMA-09/data/zphot/HELP_final_results.fits
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215_cigale.fits
+final: dmu_products/dmu32/dmu32_AKARI-NEP/data/AKARI-NEP_20180215_cigale.fits
