--- a/dmu32/dmu32_Herschel-Stripe-82/meta_main.yml
+++ b/dmu32/dmu32_Herschel-Stripe-82/meta_main.yml
@@ -1,19 +1,19 @@
 field: Herschel-Stripe-82
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/Herschel-Stripe-82_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/Herschel-Stripe-82_MOC.fits
 
 surveys: [ HSC-SSP, VISTA-VHS, VICS82, UKIDSS-LAS, PanSTARRS-3SS, SHELA, SpIES, DECaLS, DES, RCSLenS, SDSS-S82, SDSS-S81-IAC ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307.fits
+masterlist: dmu_products/dmu1/dmu1_ml_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_Herschel-Stripe-82/data/depths_herschel-stripe-82_20180307.fits
+depths: dmu_products/dmu1/dmu1_ml_Herschel-Stripe-82/data/depths_herschel-stripe-82_20180307.fits
 
-flags: http://hedam.lam.fr/HELP/data/dmu6/dmu6_v_Herschel-Stripe-82/data/tiles/herschel-stripe-82_20180307_FILENUM_flags.fits
+flags: dmu6/dmu6_v_Herschel-Stripe-82/data/tiles/herschel-stripe-82_20180307_FILENUM_flags.fits
 
 xid: None
 
-photoz: http://hedam.lam.fr/HELP/data/dmu_producs/dmu24/dmu24_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307_photoz_20180509.fits
+photoz: dmu_producs/dmu24/dmu24_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_20180307_photoz_20180509.fits
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180307_cigale.fits
+final: dmu_products/dmu32/dmu32_Herschel-Stripe-82/data/Herschel-Stripe-82_20180307_cigale.fits
