--- a/dmu32/dmu32_SSDF/meta_main.yml
+++ b/dmu32/dmu32_SSDF/meta_main.yml
@@ -1,19 +1,19 @@
 field: SSDF
 
-region: http://hedam.lam.fr/HELP/data/dmu_products/dmu2/dmu2_field_coverages/SSDF_MOC.fits
+region: dmu_products/dmu2/dmu2_field_coverages/SSDF_MOC.fits
 
 surveys: [ SSDF, VISTA-VHS, DES ]
 
-masterlist: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SSDF/data/master_catalogue_ssdf_20180221.fits
+masterlist: dmu_products/dmu1/dmu1_ml_SSDF/data/master_catalogue_ssdf_20180221.fits
 
-depths: http://hedam.lam.fr/HELP/data/dmu_products/dmu1/dmu1_ml_SSDF/data/depths_ssdf_20180221.fits
+depths: dmu_products/dmu1/dmu1_ml_SSDF/data/depths_ssdf_20180221.fits
 
 flags: None
 
 xid: None
 
-photoz: http://hedam.lam.fr/HELP/data/dmu_products/dmu24/dmu24_SSDF/data/master_catalogue_ssdf_20180221_photoz_20180612_r_optimised.fits
+photoz: dmu_products/dmu24/dmu24_SSDF/data/master_catalogue_ssdf_20180221_photoz_20180612_r_optimised.fits
 
 cigale: None
 
-final: http://hedam.lam.fr/HELP/data/dmu_products/dmu32/dmu32_SSDF/data/SSDF_20180221_cigale.fits
+final: dmu_products/dmu32/dmu32_SSDF/data/SSDF_20180221_cigale.fits
