--- a/dmu2/meta_main.yml
+++ b/dmu2/meta_main.yml
@@ -8,74 +8,86 @@ Author: Raphael Shirley
 
 fields: 
     - name: AKARI-NEP
-      description: The Infrared Astronomical Satellite AKARIon the North Ecliptic Pole (AKARI-NEP)
-      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.yml
+      description: The Infrared Astronomical Satellite AKARI on the North Ecliptic Pole (AKARI-NEP)
+      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits
 
     - name: AKARI-SEP     
-      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-SEP_MOC.yml 
+      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-SEP_MOC.fits 
               
     - name: Bootes         
-      region: dmu_products/dmu2/dmu2_field_coverages/Bootes_MOC.yml   
+      region: dmu_products/dmu2/dmu2_field_coverages/Bootes_MOC.fits   
            
     - name: CDFS-SWIRE            
-      region: dmu_products/dmu2/dmu2_field_coverages/CDFS-SWIRE_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/CDFS-SWIRE_MOC.fits
            
     - name: COSMOS   
-      region: dmu_products/dmu2/dmu2_field_coverages/COSMOS_MOC.yml
+      description: The HELP coverage of the COSMic evOlution Survey field.
+      region: dmu_products/dmu2/dmu2_field_coverages/COSMOS_MOC.fits
                     
     - name: EGS 
-      region: dmu_products/dmu2/dmu2_field_coverages/EGS_MOC.yml
+      description: The Extended Groth Strip (EGS)
+      region: dmu_products/dmu2/dmu2_field_coverages/EGS_MOC.fits
                           
     - name: ELAIS-N1  
-      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-N1_MOC.yml
+      description: The European Large Area Infrared Survey field North 1 (ELAIS-N1).
+      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-N1_MOC.fits
                     
-    - name: ELAIS-N2    
-      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-N2_MOC.yml
+    - name: ELAIS-N2   
+      description: The European Large Area Infrared Survey field North 2 (ELAIS-N2). 
+      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-N2_MOC.fits
                   
-    - name: ELAIS-S1         
-      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-S1_MOC.yml
+    - name: ELAIS-S1  
+      description: The European Large Area Infrared Survey field South 1 (ELAIS-S1).        
+      region: dmu_products/dmu2/dmu2_field_coverages/ELAIS-S1_MOC.fits
              
-    - name: GAMA-09     
-      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-09_MOC.yml
+    - name: GAMA-09    
+      descrition: The GAlaxy and Mass Assembly 9hr field (GAMA-09)
+      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-09_MOC.fits
                   
-    - name: GAMA-12       
-      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-12_MOC.yml
+    - name: GAMA-12    
+      descrition: The GAlaxy and Mass Assembly 12hr field (GAMA-12)   
+      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-12_MOC.fits
                 
     - name: GAMA-15  
-      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-15_MOC.yml
+      descrition: The GAlaxy and Mass Assembly 15hr field (GAMA-15) 
+      region: dmu_products/dmu2/dmu2_field_coverages/GAMA-15_MOC.fits
                      
     - name: HDF-N  
-      region: dmu_products/dmu2/dmu2_field_coverages/HDF-N_MOC.yml
+      description: The Hubble Deep Field - North (HDF-N)
+      region: dmu_products/dmu2/dmu2_field_coverages/HDF-N_MOC.fits
                        
-    - name: Herschel-Stripe-82   
-      region: dmu_products/dmu2/dmu2_field_coverages/Herschel-Stripe-82_MOC.yml
+    - name: Herschel-Stripe-82  
+      description: The Herschel coverage of the Sload Digital Sky Survey (SDSS) Stripe 82 field. 
+      region: dmu_products/dmu2/dmu2_field_coverages/Herschel-Stripe-82_MOC.fits
          
     - name: Lockman-SWIRE           
-      region: dmu_products/dmu2/dmu2_field_coverages/Lockman-SWIRE_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/Lockman-SWIRE_MOC.fits
       
-    - name: NGP                   
-      region: dmu_products/dmu2/dmu2_field_coverages/NGP_MOC.yml
+    - name: NGP   
+      description: The Herschel HATLAS program coverage of the North Galactic Pole (NGP) field.                
+      region: dmu_products/dmu2/dmu2_field_coverages/NGP_MOC.fits
         
     - name: SA13     
-      region: dmu_products/dmu2/dmu2_field_coverages/SA13_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/SA13_MOC.fits
                      
-    - name: SGP        
-      region: dmu_products/dmu2/dmu2_field_coverages/SGP_MOC.yml
+    - name: SGP       
+      description: The Herschel HATLAS program coverage of the South Galactic Pole (SGP) field.  
+      region: dmu_products/dmu2/dmu2_field_coverages/SGP_MOC.fits
                    
     - name: SPIRE-NEP   
-      region: dmu_products/dmu2/dmu2_field_coverages/SPIRE-NEP_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/SPIRE-NEP_MOC.fits
                   
     - name: SSDF        
-      region: dmu_products/dmu2/dmu2_field_coverages/SSDF_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/SSDF_MOC.fits
                   
     - name: xFLS         
-      region: dmu_products/dmu2/dmu2_field_coverages/xFLS_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/xFLS_MOC.fits
                  
     - name: XMM-13hr           
-      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.yml
+      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits
            
     - name: XMM-LSS          
-      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.yml      
+      region: dmu_products/dmu2/dmu2_field_coverages/AKARI-NEP_MOC.fits      
       
 
 
