--- a/dmu32/dmu32_GAMA-12/meta_main.yml
+++ b/dmu32/dmu32_GAMA-12/meta_main.yml
@@ -10,7 +10,7 @@ depths: dmu_products/dmu1/dmu1_ml_GAMA-12/data/depths_gama-12_20180218.fits
 
 flags: dmu_products/dmu6/dmu6_v_GAMA-12/data/gama-12_20180218_flags.fits
 
-xid: dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-12/data/dmu26_XID+SPIRE_GAMA_12_20180508.fits
+xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-12/data/dmu26_XID+SPIRE_GAMA_12_20180508.fits ]
 
 photoz: dmu_products/dmu24/dmu24_GAMA-12/data/master_catalogue_gama-12_20171210_photoz_20180410_r_optimised.fits
 
