--- a/dmu32/dmu32_GAMA-15/meta_main.yml
+++ b/dmu32/dmu32_GAMA-15/meta_main.yml
@@ -10,7 +10,7 @@ depths: dmu_products/dmu1/dmu1_ml_GAMA-15/data/depths_gama-15_20180213.fits
 
 flags: dmu_products/dmu6/dmu6_v_GAMA-15/data/gama-15_20180213_flags.fits
 
-xid: dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-15/data/dmu26_XID+SPIRE_GAMA-15_cat_20180416.fits
+xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_GAMA-15/data/dmu26_XID+SPIRE_GAMA-15_cat_20180416.fits ]
 
 photoz: dmu_products/dmu24/dmu24_GAMA-15/data/master_catalogue_gama-15_20180119_photoz_20180210_r_optimised.fits
 
