--- a/dmu22/meta_main.yml
+++ b/dmu22/meta_main.yml
@@ -11,6 +11,6 @@ Selection filter: SPIRE 250um, 350um and 500um
 
 Rights: N/A
 
-Acknowledgements: N/A
+Acknowledgements: Oliver et al. in prep (main HELP paper)
 
 Related products: dmu22_XID+SPIRE_"name field"-BLIND.fits, "name field"_SPIRE_all.fits
