--- a/dmu0/dmu0_ESIS-VOICE/meta_survey_2.yml
+++ b/dmu0/dmu0_ESIS-VOICE/meta_survey_2.yml
@@ -2,6 +2,6 @@ Survey: VST Optical Imaging of the CDFS and ES1 (VOICE)
 
 P.I.: Giovanni Covone (Naples, Italy) & Mattia Vaccari (Cape Town, South Africa)
 
-Reference: 2017arXiv170401495V
+Reference: Vaccari et al. 2016 - http://adsabs.harvard.edu/abs/2016heas.confE..26V
 
 URL: http://www.mattiavaccari.net/voice/
