--- a/dmu0/dmu0_SpARCS/meta_survey.yml
+++ b/dmu0/dmu0_SpARCS/meta_survey.yml
@@ -8,9 +8,9 @@ Filters: u, g, r, y, z
 
 Fields: ELAIS-N1, ELAIS-N2, Lockman-SWIRE, XMM-LSS
 
-P.I.:
+P.I.: Gillian Wilson
 
-Reference:
+Reference: 
 
 URL: http://www.faculty.ucr.edu/~gillianw/SpARCS/
 
