--- a/dmu0/dmu0_SpARCS/meta_survey.yml
+++ b/dmu0/dmu0_SpARCS/meta_survey.yml
@@ -10,7 +10,7 @@ Fields: ELAIS-N1, ELAIS-N2, Lockman-SWIRE, XMM-LSS
 
 P.I.: Gillian Wilson
 
-Reference: 
+Reference: 2008ASPC..381..210W , 2017A%26A...608A.141T
 
-URL: http://www.faculty.ucr.edu/~gillianw/SpARCS/
+URL: http://www.faculty.ucr.edu/~gillianw/SpARCS/ , https://astro.uni-bonn.de/~tudorica/webpages/SpARCS/ 
 
