--- a/dmu0/dmu0_UHS/meta_survey.yml
+++ b/dmu0/dmu0_UHS/meta_survey.yml
@@ -10,7 +10,7 @@ Fields: Bootes, EGS, ELAIS-N1, ELAIS-N2, Lockman-SWIRE, NGP, SA13, xFLS, XMM-13h
 
 P.I.: S. Dye
 
-Reference: 2017arXiv170709975D
+Reference: 2018MNRAS.473.5113D
 
 URL: http://wsa.roe.ac.uk/uhsDR1.html
 
