--- a/dmu0/dmu0_ESIS-VOICE/meta_survey.yml
+++ b/dmu0/dmu0_ESIS-VOICE/meta_survey.yml
@@ -8,9 +8,9 @@ Filters: B, V, R
 
 Fields: ELAIS-S1
 
-P.I.: Stefano Berta
+P.I.: Alberto Franceschini
 
-Reference: 2006A&A...451..881B
+Reference: 2006A&A...451..881B , 2016heas.confE..26V
 
 Publication date: 2008
 
