Updated Reference & PI

--- a/dmu0/dmu0_HSC/meta_survey.yml
+++ b/dmu0/dmu0_HSC/meta_survey.yml
@@ -9,9 +9,9 @@ Filters: g, r, i, z, y, N921, N816
 Fields: COSMOS, EGS, ELAIS-N1, GAMA-09, GAMA-12, GAMA-15, Herschel-Stripe-82,
   XMM-LSS
 
-P.I.: Satoshi Miyazaki (NAOJ), Ikuru Iwata (NAOJ)
+P.I.: Satoshi Miyazaki (NAOJ)
 
-Reference: Aihara et al. 2017ab
+Reference: 2018PASJ...70S...4A , 2018PASJ...70S...8A
 
 Publication date: 28 February 2017 - Public Data Release 1 (PDR1)
 
