--- a/dmu0/dmu0_ALLWISE/meta_survey.yml
+++ b/dmu0/dmu0_ALLWISE/meta_survey.yml
@@ -2,12 +2,12 @@ Survey: ALLWISE
 
 Telescope: Wide-field Infrared Survey Explorer (WISE)
 
-Instrument: 
+Instrument: Wide-field Infrared Survey Explorer (WISE)
 
-Filters: 
+Filters: WISE Bands 1,2,3,4
 
-Fields: GAMA-09, GAMA-12, GAMA-15
+Fields: All HELP Fields
 
-P.I.: 
+P.I.: Edward L. (Ned) Wright
 
-Reference: 
+Reference: 2010AJ....140.1868W
