Updated Reference & PI

--- a/dmu0/dmu0_VICS82/meta_survey.yml
+++ b/dmu0/dmu0_VICS82/meta_survey.yml
@@ -8,8 +8,8 @@ Filters: WIRCam-J, VIRCAM-J, WIRCam-Ks, VIRCAM-Ks
 
 Fields: Herschel-Stripe-82
 
-P.I.: James Geach
+P.I.: James (Jim) Geach
 
-Reference: 2017arXiv170505451G
+Reference: 2017ApJS..231....7G
 
 URL: http://stri-cluster.herts.ac.uk/vics82/
