Updated Several Fields

--- a/dmu0/dmu0_KIDS/meta_survey.yml
+++ b/dmu0/dmu0_KIDS/meta_survey.yml
@@ -8,11 +8,11 @@ Filters: u, g, r, i
 
 Fields: CDFS-SWIRE, COSMOS, GAMA-09, GAMA-12, GAMA-15, HATLAS-SGP
 
-P.I.: J. T. A. de Jong
+P.I.: Koen Kuijken
 
-Reference: 2013, ExA 35, 25 (2013Msngr.154...44J ?)
+Reference:  2013ExA....35...25D , 2013Msngr.154...44D
 
-URL: http://kids.strw.leidenuniv.nl/DR3/
+URL: http://kids.strw.leidenuniv.nl/
 
 Acknowledgement: Based on data products from observations made with ESO
   Telescopes at the La Silla Paranal Observatory under programme IDs 177.A-3016,
