--- a/dmu0/dmu0_COSMOS2015/meta_survey.yml
+++ b/dmu0/dmu0_COSMOS2015/meta_survey.yml
@@ -1,17 +1,15 @@
-Survey: COSMic evOlution Survey (COSMOS) 2015
+Survey: COSMic evOlution Survey (COSMOS) 2015 Multi-Wavelength Photometric Catalogue (COSMOS2015)
 
 Telescope: Various
 
 Instrument: Various
 
-Filters: 
+Filters: Various
 
 Fields: COSMOS
 
-P.I.: 
+P.I.: Various
 
-Reference: Laigle 2016
+Reference: 2016ApJS..224...24L
 
-Observation dates: 
-
-URL:
+URL: http://cosmos.astro.caltech.edu/page/photom
