--- a/dmu0/dmu0_DES/meta_survey.yml
+++ b/dmu0/dmu0_DES/meta_survey.yml
@@ -1,6 +1,6 @@
 Survey: Dark Energy Survey
 
-Telescope: Blanco
+Telescope: CTIO Blanco 4 m
 
 Instrument: Dark Energy Camera
 
@@ -10,7 +10,7 @@ Fields: Herschel-Stripe-82, XMM-LSS, CDFS-SWIRE, HATLAS-SGP, ELAIS-S1, AKARI-SEP
 
 P.I.: Donald Petravick
 
-Reference: Abbott et al. 2018
+Reference: Abbott et al. 2018 - 2018arXiv180103181A
 
 Publication date: 10 January 2018 - Public Data Release 1 (PDR1)
 
