--- a/dmu0/dmu0_SDSS-DR13/meta_survey.yml
+++ b/dmu0/dmu0_SDSS-DR13/meta_survey.yml
@@ -9,7 +9,7 @@ Filters: u, g, r, i, z
 Fields: AKARI-NEP, Bootes, COSMOS, EGS, ELAIS-N1, ELAIS-N2, GAMA-09, GAMA-12,
   GAMA-15, HDF-N, Herschel-Stripe-82, Lockman-SWIRE, SPIRE-NEP, XMM-LSS, xFLS
 
-Reference: 2016arXiv160802013S
+Reference: 2017ApJS..233...25A
 
 Publication date: 31 Jul 2016
 
