--- a/dmu0/dmu0_NDWFS/meta_survey.yml
+++ b/dmu0/dmu0_NDWFS/meta_survey.yml
@@ -1,6 +1,6 @@
 Survey: NOAO Deep Wide-Field Survey (NDWFS)
 
-Telescope: Kitt Peak National Observatory (KPNO) 4 m (BwRI) and 2.1 m (K) Telescopes
+Telescope: KPNO Mayall 4 m (BwRI) and 2.1 m (K) Telescopes
 
 Instrument: MOSAIC1 (BwRI) and ONIS (K) Cameras - Jannuzi+ 2004
 
