--- a/dmu0/dmu0_KPNO-FLS/meta_survey.yml
+++ b/dmu0/dmu0_KPNO-FLS/meta_survey.yml
@@ -1,8 +1,8 @@
 Survey: Spitzer First Look Survey (FLS) - NOAO Extragalactic - R
 
-Telescope: Kitt Peak 4m telescope
+Telescope: KPNO Mayall 4 m telescope
 
-Instrument: MOSAIC-1
+Instrument: MOSAIC1
 
 Filters: R
 
