--- a/dmu0/dmu0_SPLASH-SXDF/meta_survey.yml
+++ b/dmu0/dmu0_SPLASH-SXDF/meta_survey.yml
@@ -8,6 +8,6 @@ Filters: Several
 
 P.I.: Vihang Mehta
 
-Reference: arXiv1711.05280
+Reference: 2018ApJS..235...36M
 
 Publication date: November 2017
