--- a/dmu0/dmu0_LegacySurvey/meta_survey.yml
+++ b/dmu0/dmu0_LegacySurvey/meta_survey.yml
@@ -8,7 +8,7 @@ Filters: u, g, r, i, z, Y
 
 Fields: Bootes, EGS, ELAIS-N1, ELAIS-N2, Lockman-SWIRE, NGP, SA13, xFLS, XMM-13hr
 
-Reference: arXiv:1804.08657
+Reference: 2018arXiv180408657D
 
 URL: http://legacysurvey.org/
 
