--- a/dmu32/dmu32_SGP/meta_main.yml
+++ b/dmu32/dmu32_SGP/meta_main.yml
@@ -14,6 +14,6 @@ xid: [ dmu_products/dmu26/dmu26_XID+SPIRE_SGP/data/dmu26_XID+SPIRE_SGP_20180625.
 
 photoz: dmu_products/dmu24/dmu24_SGP/data/master_catalogue_sgp_20180221_photoz_20180502_r_optimised.fits
 
-cigale: None
+cigale: dmu_products/dmu28/dmu28_SGP/data/zphot/HELP_final_results.fits
 
 final: dmu_products/dmu32/dmu32_SGP/data/SGP_20180221_cigale.fits
