--- a/dmu0/dmu0_NEP-Spitzer/meta_survey.yml
+++ b/dmu0/dmu0_NEP-Spitzer/meta_survey.yml
@@ -8,8 +8,8 @@ Filters: IRAC1, IRAC2
 
 Fields: AKARI-NEP
 
-P.I.: 
+P.I.: J. Bock
 
-Reference:  1712.01290
+Reference: 2018ApJS..234...38N
 
-URL: https://arxiv.org/pdf/1712.01290.pdf
+URL: http://adsabs.harvard.edu/abs/2018ApJS..234...38N
