--- a/dmu0/dmu0_SDSS-S82/meta_survey.yml
+++ b/dmu0/dmu0_SDSS-S82/meta_survey.yml
@@ -8,7 +8,7 @@ Filters: u, g, r, i, z
 
 Fields: Herschel-Stripe-82
 
-Reference: ???
+Reference: 2014ApJ...794..120A
 
 Observation dates: 2000 - 2008
 
