--- a/dmu26/dmu26_XID+PACS_ELAIS-N2/meta_main.yml
+++ b/dmu26/dmu26_XID+PACS_ELAIS-N2/meta_main.yml
@@ -1,10 +1,10 @@
-Product: dmu26_XID+PACS_ELAIS-N1
+Product: dmu26_XID+PACS_ELAIS-N2
 
 Version: 1.0
 
 Author: Peter Hurley
 
-Fields: ELAIS-N1
+Fields: ELAIS-N2
 
 Selection filter: F_PACS_100, F_PACS_160
 
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: ELAIS-N1-100um-img_wgls.fits, ELAIS-N1-100um-img_noise.fits, ELAIS-N1-160um-img_wgls.fits, ELAIS-N1-160um-img_noise.fits, dmu18_PACS_100_PSF_ELAIS-N1_20170720.fits,  dmu18_PACS_160_PSF_ELAIS-N1_20170720.fits
+Related products: HerMES_PACS_level6_ELAIS_N2_SWIRE_100um_EdoIbar_Unimap.fits, HerMES_PACS_level6_ELAIS_N2_SWIRE_160um_EdoIbar_Unimap.fits, dmu18_PACS_100_PSF_ELAIS-N2_20181213.fits, dmu18_PACS_160_PSF_ELAIS-N2_20181213.fits
