Added fiedls to DECaLS meta

--- a/dmu0/dmu0_DECaLS/meta_survey.yml
+++ b/dmu0/dmu0_DECaLS/meta_survey.yml
@@ -6,6 +6,8 @@ Instrument: Dark Energy Camera (DECam)
 
 Filters: u, g, r, i, z, Y
 
+Fields: COSMOS, GAMA-09, GAMA-12, GAMA-15, HATLAS-NGP, Herschel-Stripe-82, XMM-LSS
+
 P.I.: Arjun Dey and David Schlegel
 
 Reference: 2018arXiv180408657D
