--- a/dmu0/dmu0_DECaLS/meta_survey.yml
+++ b/dmu0/dmu0_DECaLS/meta_survey.yml
@@ -6,7 +6,7 @@ Instrument: Dark Energy Camera (DECam)
 
 Filters: u, g, r, i, z, Y
 
-Fields: COSMOS, GAMA-09, GAMA-12, GAMA-15, HATLAS-NGP, Herschel-Stripe-82, XMM-LSS
+Fields: Bootes, COSMOS, GAMA-09, GAMA-12, GAMA-15, HATLAS-NGP, Herschel-Stripe-82, XMM-LSS
 
 P.I.: Arjun Dey and David Schlegel
 
