--- a/dmu26/dmu26_XID+MIPS_EGS/meta_main.yml
+++ b/dmu26/dmu26_XID+MIPS_EGS/meta_main.yml
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: , dmu17_MIPS_EGS_.fits, master_catalogue_egs_.fits 
+Related products: 70101880.70101880-0.MIPS.1.help.fits, dmu17_MIPS_EGS_20190204.fits, master_catalogue_egs_.fits 
