work on PACS_ELAIS-N2

--- a/dmu26/dmu26_XID+PACS_ELAIS-N2/meta_main.yml
+++ b/dmu26/dmu26_XID+PACS_ELAIS-N2/meta_main.yml
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: HerMES_PACS_level6_ELAIS_N2_SWIRE_100um_EdoIbar_Unimap.fits, HerMES_PACS_level6_ELAIS_N2_SWIRE_160um_EdoIbar_Unimap.fits, dmu18_PACS_100_PSF_ELAIS-N2_20181213.fits, dmu18_PACS_160_PSF_ELAIS-N2_20181213.fits
+Related products: ELAIS-N2_PACS100_v0.9.fits, ELAIS-N2_PACS160_v0.9.fits, dmu18_PACS_100_PSF_ELAIS-N2_20181213.fits, dmu18_PACS_160_PSF_ELAIS-N2_20181213.fits
