--- a/dmu26/dmu26_XID+PACS_GAMA-12/meta_main.yml
+++ b/dmu26/dmu26_XID+PACS_GAMA-12/meta_main.yml
@@ -1,10 +1,10 @@
-Product: dmu26_XID+PACS_GAMA-09
+Product: dmu26_XID+PACS_GAMA-12
 
 Version: 1.0
 
 Author: María Campos
 
-Fields: GAMA-09
+Fields: GAMA-12
 
 Selection filter: F_PACS_100, F_PACS_160
 
@@ -12,4 +12,4 @@ Rights: N/A
 
 Acknowledgements: N/A
 
-Related products: GAMA-12_PACS100_v0.9.fits, GAMA-12_PACS160_v0.9.fits,dmu18_PACS_100_PSF_GAMA-12_20190131.fits, dmu18_PACS_160_PSF_GAMA-12_20190131.fits, GAMA-12_Ldust_prediction_results.fits, master_catalogue_gama-12_20171210_photoz_20180410_r_optimised
+Related products: GAMA-12_PACS100_v0.9.fits, GAMA-12_PACS160_v0.9.fits,dmu18_PACS_100_PSF_GAMA-12_20190131.fits, dmu18_PACS_160_PSF_GAMA-12_20190131.fits, GAMA-12_Ldust_prediction_results.fits, master_catalogue_gama-12_20171210_photoz_20180410_r_optimised.fits
