--- a/dmu32/dmu32_Bootes/meta_main.yml
+++ b/dmu32/dmu32_Bootes/meta_main.yml
@@ -10,7 +10,8 @@ depths: dmu_products/dmu1/dmu1_ml_Bootes/data/depths_bootes_20180520.fits
 
 flags: dmu_products/dmu6/dmu6_v_Bootes/data/bootes_20180520_flags.fits
 
-xid: None
+xid: [ dmu_products/dmu26/dmu26_XID+MIPS_Bootes/data/dmu26_XID+MIPS_Bootes_cat_20190320.fits,
+       dmu_products/dmu26/dmu26_XID+SPIRE_Bootes/data/dmu26_XID+SPIRE_Bootes_cat_20190325.fits ]
 
 photoz: None
 
